<resources>
    <string name="app_name">Volume Booster</string>
    <string name="default_notify_title">Message</string>
    <string name="next">Next</string>
    <string name="sculpt_your_sound">Sculpt Your Sound</string>
    <string name="fine_tune_your_audio_experience_with_precision">Fine-Tune Your Audio Experience with Precision</string>
    <string name="elevate_your_audio">Elevate Your Audio</string>
    <string name="power_up_the_volume_when_you_need_it_most">Power Up the Volume When You Need It Most</string>
    <string name="adaptive_sound">Adaptive Sound</string>
    <string name="let_your_environment_set_the_perfect_volume"> Let Your Environment Set the Perfect Volume</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="let_us_know_your_experience">Let us know your experience</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="title_rate_4_5">We love you too!</string>
    <string name="content_rate_4_5">Thanks for your feedback</string>
    <string name="oh_no">Oh, no!</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="poor">Poor!</string>
    <string name="good">Good!</string>
    <string name="great">Great!</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="we_love_you_too">We love you too!</string>
    <string name="string_thank_you_for_rating_the_app">Thank you for rating the app!</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="language_title">Language</string>
    <string name="per_title">Permission</string>
    <string name="per_go">Go</string>
    <string name="per_content">Volume Booster requires permission to use the device\'s storage</string>
    <string name="per_storage">Storage</string>
    <string name="setting_title">Setting</string>
    <string name="rate_us">Rate us</string>
    <string name="policy">Policy</string>
    <string name="run_in_app_background">Run in app background</string>
    <string name="system_sound">System sound</string>
    <string name="mute">Mute</string>
    <string name="max">Max</string>
    <string name="bass_boots">Bass boost</string>
    <string name="visualizer">Visualizer</string>
    <string name="volume">Volume</string>
    <string name="equalizer">Equalizer</string>
    <string name="normal">Normal</string>
    <string name="classical">Classical</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="save_preset">Save Preset</string>
    <string name="preset_name">Preset name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="access_notifications">Access notifications</string>
    <string name="theme">Theme</string>
    <string name="preset">Preset</string>
    <string name="delete">Delete</string>
    <string name="delete_preset">Delete preset</string>
    <string name="delete_preset_question">Bạn có chắc chắn muốn xóa %s?</string>
</resources>