<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_permission"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/header_permission"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_permission"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_bold"
                android:gravity="start"
                android:lineSpacingExtra="28.6dp"
                android:paddingTop="8dp"
                android:text="@string/per_title"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/per_go"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_permission"
            android:layout_width="214dp"
            android:layout_height="170.24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/permission_img" />

        <TextView
            android:id="@+id/description_perssion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.76dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:text="@string/per_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_storage"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/per_storage"
                android:fontFamily="@font/opensans_bold"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/access_notifications"
                android:fontFamily="@font/opensans_bold"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
</layout>