<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/color_3B394B"
            android:tag="layout/dialog_audio_not_saved_0">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/delete_preset"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@color/black"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/questionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/delete_preset_question"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/questionTxt"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_save_select_btn"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_cancel"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_A569FC"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</layout>
