<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <!--        <com.sdsmdg.harjot.crollerTest.Croller-->
        <!--            android:id="@+id/crollerBtn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            app:back_circle_color="#EDEDED"-->
        <!--            app:indicator_color="#0B3C49"-->
        <!--            app:indicator_width="10"-->
        <!--            app:is_continuous="true"-->
        <!--            app:label_color="#000000"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:main_circle_color="#FFFFFF"-->
        <!--            app:max="1000"-->
        <!--            app:progress_primary_color="#0B3C49"-->
        <!--            app:progress_secondary_color="#EEEEEE"-->
        <!--            app:start_offset="45"-->
        <!--            tools:ignore="MissingConstraints"-->
        <!--            tools:layout_editor_absoluteX="0dp"-->
        <!--            tools:layout_editor_absoluteY="0dp" />-->

        <RelativeLayout
            android:id="@+id/controlView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

<!--            <com.airbnb.lottie.LottieAnimationView-->
<!--                android:id="@+id/animationView"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="300dp"-->
<!--                app:lottie_autoPlay="true"-->
<!--                app:lottie_loop="true"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                app:lottie_rawRes="@raw/animation_sound" />-->

            <com.example.hahalolofake.ui.equalizer.AnalogController
                android:id="@+id/controllerBass"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/soundTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/system_sound"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/controlView" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:progress="@integer/luminosite_defaut"
            android:progressBackgroundTint="@color/color_4B5062"
            android:progressTint="@color/color_D041FC"
            android:thumb="@drawable/ic_point_seekbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundTxt" />

        <LinearLayout
            android:id="@+id/soundEffectView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mute"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/bg_sound_select"
                android:text="@string/mute"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound30"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="30%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound60"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="60%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound100"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="100%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/soundEffectView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundEffectView1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound125"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/bg_sound_select"
                android:text="125%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound150"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="150%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sound175"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="175%"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/max"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_sound_select"
                android:text="@string/max"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>